# myspace

./: .gitignore  LICENSE.rst  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
myspace/: __init__.py  core.py  jason_plot.py  plot.py
notebooks/: Demo.ipynb  FGK-select.ipynb  ForHogg.ipynb  Gaia-Jason-Fail.ipynb  Hexagon-UVW.ipynb  Hexagon-freq.ipynb  MySpace-GaiaDR2.ipynb  Myspace-prototyping-GMM.ipynb  Myspace-prototyping-kde.ipynb  Myspace-prototyping.ipynb  Oorts-constants.ipynb  Plotting-wedgie.ipynb  Stationary-hexagons.ipynb  test-freq-actions.ipynb
scripts/: compute-freqs.py  logger.py
text/: Makefile  myspace.tex  preamble.tex
