[metadata]
name = myspace
author = Adrian Price-Whelan
author_email = adrianmpw@gmail.com
license = MIT
license_file = LICENSE.rst
url = http://github.com/adrn/myspace
description = Finding position-dependent transformations of the velocity distribution
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = adrn/myspace

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy
    scipy
    jax
    jaxlib

[options.package_data]
# myspace = data/*.txt
# myspace.tests = data/*

[options.extras_require]
test =
    pytest
    pytest-astropy
docs =
    sphinx-astropy

[tool:pytest]
testpaths = "myspace"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[flake8]
max-line-length = 100
per-file-ignores =
    # imported but unused
    __init__.py: F401, F403
    # local variable assigned but never used
    test*.py: F841
    helpers.py: F841
ignore =
    E402
    E226
    E741
    W504
    W503
